--- a/src/App.css
+++ b/src/App.css
@@ -29,6 +29,9 @@ a:hover {
 
 
 
+
 body {
-  background: #04080F;
+  background: linear-gradient(124.23deg, #3E4151 -21.92%, #1D1E24 9.03%, #04080F 74.99%), #FFFFFF no-repeat;
+  background-size: cover;
+  min-height: 100vh; /* Минимальная высота равная высоте видимого экрана */
 }
