--- a/src/components/MainPage/header/header.module.css
+++ b/src/components/MainPage/header/header.module.css
@@ -48,7 +48,20 @@
 
 
 .button {
-    @apply font-ProximBold mt-[50px] px-[200px] py-4 border-none text-2xl bg-gradient-to-r from-blue-700 to-purple-700 rounded-md hover:bg-gradient-to-b hover:text-white
+    padding: 15px 0;
+    width: 100%;
+    font-size: 23px;
+    font-weight: bold;
+    color: white;
+    background: linear-gradient(90deg, #0C83FF 20.83%, #9008FE 100%);
+    border-radius: 6px;
+    margin-top: 45px;
+}
+
+.button:hover {
+    transition: .3s;
+    border-color: #9008FE;
+    box-shadow: 0 0 14px #0C83FF;
 }
 
 
