--- a/src/App.css
+++ b/src/App.css
@@ -31,7 +31,6 @@ a:hover {
 
 
 body {
-  background: linear-gradient(124.23deg, #3E4151 -21.92%, #1D1E24 9.03%, #04080F 74.99%), #FFFFFF no-repeat;
-  background-size: cover;
-  min-height: 110vh;
+  background: linear-gradient(124.23deg, #3E4151 -21.92%, #1D1E24 9.03%, #04080F 74.99%), #FFFFFF;
+
 }
