--- a/src/components/MainPage/slider/slider.module.css
+++ b/src/components/MainPage/slider/slider.module.css
@@ -15,23 +15,156 @@
 }
 
 .h3 {
-    @apply absolute top-[447px] text-gray-500 text-[18px]
+    @apply absolute top-[447px] text-gray-500 text-[18px] font-ProximSemiBold
 }
 
 .h1 {
-    @apply absolute top-[475px] text-white text-[28px]
+    @apply absolute top-[475px] text-white text-[28px] font-ProximBold
 }
 
 
 .server_progress__online {
-    @apply h-[3px] bg-progress-online mt-[10px] w-[276px] top-[529px] rounded-[27px] overflow-hidden absolute
+    @apply h-[3px] bg-progress-online mt-[10px] w-[276px] top-[519px] rounded-[27px] overflow-hidden absolute
 }
 
 .server_status {
-    @apply flex items-center top-[545px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
+    @apply flex items-center font-ProximSemiBold top-[545px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
 }
 
 
 .online {
     @apply text-[16px] text-white
+}
+
+
+
+
+
+
+@media (max-width: 1450px ) {
+
+
+    .h1 {
+        @apply top-[400px]
+    }
+
+    .server_progress__online {
+        @apply top-[475px]
+    }
+
+    .server_status {
+        @apply top-[500px]
+    }
+
+    .server {
+        @apply px-[10px]
+    }
+
+
+}
+
+@media (max-width: 1200px ) {
+
+
+    .h1 {
+        @apply top-[400px]
+    }
+
+    .server_progress__online {
+        @apply top-[475px]
+    }
+
+    .server_status {
+        @apply top-[500px]
+    }
+
+    .server {
+        @apply px-[15px]
+    }
+
+
+}
+
+@media (max-width: 768px ) {
+
+
+    .slider {
+        @apply mr-[350px]
+    }
+
+    .server {
+        @apply px-[50px] rounded-[60px] py-0
+    }
+
+
+}
+
+
+@media (max-width: 480px ) {
+
+
+    .slider {
+        @apply mr-[675px] mt-52
+    }
+
+    .server {
+        @apply px-[30px] rounded-[60px] py-0 h-[430px]
+    }
+
+    .h3 {
+        @apply absolute top-[310px] text-gray-500 text-[16px]
+    }
+
+    .h1 {
+        @apply absolute top-[330px] text-white text-[24px]
+    }
+
+
+    .server_progress__online {
+        @apply h-[3px] bg-progress-online mt-[10px] w-[176px] top-[360px] rounded-[27px] overflow-hidden absolute
+    }
+
+    .server_status {
+        @apply flex items-center top-[380px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
+    }
+
+}
+
+@media (max-width: 368px ) {
+
+
+    .slider {
+        @apply mr-[800px] mt-52
+    }
+
+    .server {
+        @apply px-[20px] rounded-[60px] py-0 h-[400px]
+    }
+
+    .button {
+        @apply bg-gray-800 h-[30px] w-[35px] py-0 pl-[13px]
+    }
+
+    .btn_strell {
+        @apply h-[16px]
+    }
+
+
+    .h3 {
+        @apply absolute top-[300px] text-gray-500 text-[16px]
+    }
+
+    .h1 {
+        @apply absolute top-[320px] text-white text-[24px]
+    }
+
+
+    .server_progress__online {
+        @apply h-[3px] bg-progress-online mt-[10px] w-[176px] top-[350px] rounded-[27px] overflow-hidden absolute
+    }
+
+    .server_status {
+        @apply flex items-center top-[370px] mb-[42px] absolute before:block before:w-[8px] before:h-[8px] before:rounded-[50%] before:mr-[10px] before:bg-server-status
+    }
+
 }
