--- a/src/App.css
+++ b/src/App.css
@@ -32,5 +32,12 @@ a:hover {
 
 body {
   background: linear-gradient(124.23deg, #3E4151 -21.92%, #1D1E24 9.03%, #04080F 74.99%), #FFFFFF;
+  overflow-x: hidden;
+}
+
+@media (max-width: 368px) {
+  body {
+    overflow-x: hidden;
+  }
 
 }
